force-app/main/default/objects/Student_Semester_Mapping__c/Student_Semester_Mapping__c.object-meta.xml
<CustomObject>
    <label>Student Semester Mapping</label>
    <nameField>
        <label>Student Semester Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Semester Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>