force-app/main/default/objects/Student_Semester_Mapping__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <formula>Program_Enrollment__r.hed__Contact__r.Id</formula>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>