force-app/main/default/objects/Student_Semester_Mapping__c/fields/Course_Connections_Created__c.field-meta.xml
<CustomField>
    <fullName>Course_Connections_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Connections Created</label>
    <type>Checkbox</type>
</CustomField>