force-app/main/default/objects/Student_Semester_Mapping__c/fields/Mapped_to_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Mapped_to_Program_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mapped to Program Enrollment</label>
    <type>Checkbox</type>
</CustomField>