force-app/main/default/objects/Student_Semester_Mapping__c/fields/Program_Batch__c.field-meta.xml
<CustomField>
    <fullName>Program_Batch__c</fullName>
    <formula>Program_Enrollment__r.hed__Contact__r.Program_Batch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Batch</label>
    <type>Text</type>
</CustomField>