force-app/main/default/objects/Student_Semester_Mapping__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semester</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>hed__Term__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Semester</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Student Semester Mappings (Term)</relationshipLabel>
    <relationshipName>Student_Term_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>