force-app/main/default/objects/Student_Semester_Mapping__c/fields/Semester_ID__c.field-meta.xml
<CustomField>
    <fullName>Semester_ID__c</fullName>
    <formula>IF( Record_Type_Name__c =&apos;Student Semester&apos;, CASESAFEID(Semester__c),
IF( Record_Type_Name__c =&apos;Student Section&apos;, CASESAFEID(Section__r.hed__Parent_Term__r.Id) ,
IF( Record_Type_Name__c =&apos;Student Batch&apos;, CASESAFEID(Student_Batch__r.hed__Parent_Term__r.hed__Parent_Term__r.Id),
IF(Record_Type_Name__c =&apos;Student Group Allocation&apos;, CASESAFEID(Student_Group__r.hed__Parent_Term__r.Id),&apos;0&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semester ID</label>
    <type>Text</type>
</CustomField>