force-app/main/default/objects/Student_Semester_Mapping__c/fields/SRN__c.field-meta.xml
<CustomField>
    <fullName>SRN__c</fullName>
    <formula>Program_Enrollment__r.SRN_Number__c</formula>
    <label>SRN</label>
    <type>Text</type>
</CustomField>