force-app/main/default/objects/Student_Semester_Mapping__c/fields/Student_Batch__c.field-meta.xml
<CustomField>
    <fullName>Student_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Batch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>hed__Term__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Batches</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipName>Student_Term_Mappings2</relationshipName>
    <type>Lookup</type>
</CustomField>