force-app/main/default/objects/Student_Semester_Mapping__c/fields/Student_Group__c.field-meta.xml
<CustomField>
    <fullName>Student_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Group</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipName>Student_Term_Mappings3</relationshipName>
    <type>Lookup</type>
</CustomField>