force-app/main/default/objects/Student_Semester_Mapping__c/fields/Student_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_Group_Number__c</fullName>
    <formula>Student_Group__r.Group_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Group Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>