force-app/main/default/objects/Student_Semester_Mapping__c/fields/Student_Section_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_Section_Batch_ID__c</fullName>
    <formula>IF(Record_Type_Name__c = &quot;Student Section&quot;,  CASESAFEID(Section__r.Id),
IF(Record_Type_Name__c = &quot;Student Batch&quot;,  CASESAFEID( Student_Batch__r.hed__Parent_Term__r.Id), NULL ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Section/Batch ID</label>
    <type>Text</type>
</CustomField>