force-app/main/default/objects/Student_Semester_Mapping__c/recordTypes/Student_Batch.recordType-meta.xml
<RecordType>
    <fullName>Student_Batch</fullName>
    <active>true</active>
    <label>Student Batch</label>
</RecordType>