force-app/main/default/objects/Student_Semester_Mapping__c/recordTypes/Student_Group_Allocation.recordType-meta.xml
<RecordType>
    <fullName>Student_Group_Allocation</fullName>
    <active>true</active>
    <label>Student Group Allocation</label>
</RecordType>