force-app/main/default/objects/Student_Semester_Mapping__c/recordTypes/Student_Section.recordType-meta.xml
<RecordType>
    <fullName>Student_Section</fullName>
    <active>true</active>
    <label>Student Section</label>
</RecordType>