force-app/main/default/objects/Student_Semester_Mapping__c/recordTypes/Student_Semester.recordType-meta.xml
<RecordType>
    <fullName>Student_Semester</fullName>
    <active>true</active>
    <label>Student Semester</label>
</RecordType>