force-app/main/default/objects/Student_Semester_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>Student_Batch__c</columns>
    <columns>Active__c</columns>
    <columns>Course_Connections_Created__c</columns>
    <columns>Start_Date__c</columns>
    <columns>SRN__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/29/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>rashmi</value>
    </filters>
    <label>All</label>
</ListView>