force-app/main/default/objects/Student_Semester_Mapping__c/listViews/Civil_Elective.listView-meta.xml
<ListView>
    <fullName>Civil_Elective</fullName>
    <columns>NAME</columns>
    <columns>Course_Connections_Created__c</columns>
    <columns>Active__c</columns>
    <columns>SRN__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Student_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Student_Semester_Mapping__c.Student_Group_Allocation</value>
    </filters>
    <filters>
        <field>Student_Group__c</field>
        <operation>contains</operation>
        <value>Green Building</value>
    </filters>
    <label>Civil Elective</label>
    <sharedTo>
        <role>Vertical_Head_CE</role>
    </sharedTo>
</ListView>